<resources>
    <string name="app_name">Lab_4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_up">Sign Up</string>
    <string name="google_sign_in">Or Sign In with </string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="confirm">Confirm</string>
    <string name="enter_username_and_password">Enter Username\n and Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username_error">Username can only use letters, numbers and must contain 4 to 16 symbols.</string>
    <string name="password_error">Password must contain 8 or more lower and upper case symbols with at least one number.</string>
    <string name="confirm_password_error">Passwords do not match.</string>
    <string name="log_in_error">Incorrect username or password.</string>
    <string name="exit_dialog">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_sign_in">You signed in successfully</string>
</resources>